<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Geri Butonu -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="46dp"
            android:layout_height="49dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <!-- Başlık: "Profil Oluştur" -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_android_black_24dp"
            android:contentDescription="@string/profile_image"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height_hint"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_hint"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>
