<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Geri Butonu -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="46dp"
            android:layout_height="49dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/back"
            android:src="@drawable/baseline_arrow_back_24" />

        <!-- Başlık: "Profil" -->
        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <!-- Profil Resmi -->
        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/profile_image"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_android_black_24dp" />

        <!-- Ad -->
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Email -->
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Boy -->
        <TextView
            android:id="@+id/heightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Kilo -->
        <TextView
            android:id="@+id/weightTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_label"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Yaş -->
        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:textSize="16sp"
            android:layout_marginBottom="8dp" />

        <!-- Profili Düzenle Butonu -->
        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_button"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
