<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Başlık: "Adım Düzenle" -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_step_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Geri Butonu -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back"
        android:layout_margin="16dp" />

    <!-- Adım Sayısı -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/step_count_hint"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <!-- Harcanan Süre -->
    <EditText
        android:id="@+id/editTextDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duration_hint_extended"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <!-- Tarih -->
    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint_extended"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <!-- Kaydet Butonu -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:minHeight="48dp" />

</LinearLayout>
