<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/targetStepTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_title"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/targetCalorieTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textSize="14sp"
        android:layout_marginBottom="4dp" />

    <!-- Öncelik + Tamamlandı Kutucuğu -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/priorityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_label"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/completedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed"
            android:layout_marginStart="16dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="8dp" />
    </LinearLayout>

    <!-- Düzenle & Sil & Takvime Ekle -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/delete" />

        <Button
            android:id="@+id/addToCalendarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_calendar" />
    </LinearLayout>
</LinearLayout>
