<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Başlık: "Adım Ekle" -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_step_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp" />

    <!-- Geri Düğmesi -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/back"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <!-- Adım Sayısı -->
    <EditText
        android:id="@+id/editTextStepCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/step_count_hint"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:layout_below="@id/backButton"
        android:layout_marginTop="16dp" />

    <!-- Harcanan Süre (dakika bazında) -->
    <EditText
        android:id="@+id/editTextDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duration_hint"
        android:padding="12dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:layout_below="@id/editTextStepCount" />

    <!-- Tarih -->
    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_hint"
        android:layout_marginBottom="24dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_below="@id/editTextDuration" />

    <!-- Kaydet Butonu -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:minHeight="48dp"
        android:layout_below="@id/editTextDate"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
